// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme test adapter balance endpoint should reply with success 1`] = `
Object {
  "data": Object {
    "result": Array [
      Object {
        "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
        "balance": "2188",
        "chain": "mainnet",
        "coin": "btc",
      },
    ],
  },
  "jobRunID": "1",
  "result": Array [
    Object {
      "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
      "balance": "2188",
      "chain": "mainnet",
      "coin": "btc",
    },
  ],
  "statusCode": 200,
}
`;

exports[`readme test adapter marketcap endpoint should reply with success 1`] = `
Object {
  "data": Object {
    "result": 1000000000,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1000000000,
  "statusCode": 200,
}
`;

exports[`readme test adapter marketcap endpoint should reply with success when called with \`mc\` 1`] = `
Object {
  "data": Object {
    "result": 1000000000,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1000000000,
  "statusCode": 200,
}
`;

exports[`readme test adapter price endpoint should reply with success 1`] = `
Object {
  "data": Object {
    "result": 123456,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 123456,
  "statusCode": 200,
}
`;

exports[`readme test adapter price endpoint should reply with success when called with \`convert\` 1`] = `
Object {
  "data": Object {
    "result": 123456,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 123456,
  "statusCode": 200,
}
`;
